; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_nau8824.c_nau8824_is_jack_inserted.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_nau8824.c_nau8824_is_jack_inserted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nau8824 = type { i64, %struct.snd_soc_jack* }
%struct.snd_soc_jack = type { i32 }

@SND_JACK_HEADPHONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nau8824*)* @nau8824_is_jack_inserted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nau8824_is_jack_inserted(%struct.nau8824* %0) #0 {
  %2 = alloca %struct.nau8824*, align 8
  %3 = alloca %struct.snd_soc_jack*, align 8
  %4 = alloca i32, align 4
  store %struct.nau8824* %0, %struct.nau8824** %2, align 8
  %5 = load %struct.nau8824*, %struct.nau8824** %2, align 8
  %6 = getelementptr inbounds %struct.nau8824, %struct.nau8824* %5, i32 0, i32 1
  %7 = load %struct.snd_soc_jack*, %struct.snd_soc_jack** %6, align 8
  store %struct.snd_soc_jack* %7, %struct.snd_soc_jack** %3, align 8
  store i32 0, i32* %4, align 4
  %8 = load %struct.nau8824*, %struct.nau8824** %2, align 8
  %9 = getelementptr inbounds %struct.nau8824, %struct.nau8824* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %1
  %13 = load %struct.snd_soc_jack*, %struct.snd_soc_jack** %3, align 8
  %14 = icmp ne %struct.snd_soc_jack* %13, null
  br i1 %14, label %15, label %21

15:                                               ; preds = %12
  %16 = load %struct.snd_soc_jack*, %struct.snd_soc_jack** %3, align 8
  %17 = getelementptr inbounds %struct.snd_soc_jack, %struct.snd_soc_jack* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @SND_JACK_HEADPHONE, align 4
  %20 = and i32 %18, %19
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %15, %12, %1
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
